# Tender-Review

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
bid_agent/: __init__.py  app.py  config.py  db.py  document_service.py  extractors.py  hermes.py  mcp_server.py  parsers.py  reports.py  review.py  search.py  storage.py  vector_store.py
bid_agent/static/: styles.css
bid_agent/templates/: base.html  document_detail.html  documents.html  job_detail.html  login.html  project_detail.html  projects.html
config/hermes/: default-SOUL.md
sample_data/: fake_proposal.txt  fake_qualification.txt  fake_tender.txt
scripts/: bid-review-mcp.cmd  doctor.ps1  download-local-models.ps1  install-hermes-default-soul.ps1  install-windows.ps1  register-hermes-mcp.ps1  reindex-documents.ps1  run-dev.ps1
tests/: test_agent_lessons.py  test_db_search.py  test_document_cancel.py  test_extractors.py  test_hermes.py  test_mcp_direct.py  test_parsers.py  test_reports.py  test_review_numbering.py  test_review_workflow.py  test_search.py  test_storage.py
