[project]
name = "bid-agent-web"
version = "0.1.0"
description = "Hermes Agent powered internal bid pre-review web system"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "pdfplumber>=0.11.4",
  "pypdf>=5.0.0",
  "python-docx>=1.1.2",
  "openpyxl>=3.1.5",
  "paddleocr==3.6.0",
  "paddlepaddle==3.2.2",
  "numpy>=1.24,<2.4",
  "pymupdf>=1.24.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
